# infDB_fork_31mar

./: .env  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CITATION.cff  Readme.md  compose.yml  index.html  infdb-import.sh  infdb-remove.sh  infdb-start.sh  infdb-startup.sh  infdb-stop.sh  infdb.sh  paper.md  pyproject.toml  startup.sh
.github/workflows/: ci.yml  mkdcos.yml
.gitlab/issue_templates/: Validating.md
api/: index.html
api/pyinfdb/: index.html
configs/: config-infdb-backup.yml  config-infdb-import.yml  config-infdb-import.yml.by  config-infdb-import.yml.bynrw  config-infdb-import.yml.nrw  config-infdb-import.yml.template  config-infdb-loader.yml  config-infdb.yml  config-infdb.yml.template
development/: index.html
development/code-of-conduct/: index.html
development/documentation/: index.html
development/repository/: index.html
development/tips-and-tricks/: index.html
development/workflow/: index.html
docs/: README.md  data-bugs.md  mkdocs.yml
docs-sphinx/operations/: CI_CD_GUIDE.md
docs/.obsidian/: workspace.json
docs/docs/: contact.md  index.md  license.md  test.md
docs/guidelines/: CODING_GUIDELINES.md
docs/mkdocs/: mkdocs.yml
docs/operations/: CI_CD_GUIDE.md
docs/source/: conf.py
infdb/: index.html
infdb/architecture/: index.html
infdb/database/: index.html
infdb/services/: index.html
linear-heat-density/: index.html
scripts/: lizmap.sh
search/: search_index.json
services/api/: README.md
services/infdb-db/: Dockerfile  compose.yml
services/infdb-http/: htpasswd
services/infdb-import/: compose.yml  main.py
services/infdb-importer/: Dockerfile  Readme.md  compose.yml  main.py  run.sh
services/infdb-init/: Dockerfile  compose.yml  main.py  pyproject.toml
services/infdb-setup/: Dockerfile  (+3 more)
tools/: Readme.md  compose-pylovo.yml  compose.yml  index.html  notes.md  run-profile.sh  run-service.sh  run-single-service.sh  run-tool.sh  run.sh  run_ags.py  run_linear-heat-density.sh  run_linear_heat_density.py  run_linear_heat_density_new.sh  run_profile.py  run_pylovo-generation.sh  tools.env  tools.sh
tools/infdb-loader/: .env  .gitignore  Dockerfile  Readme.md  compose.yml  create_new_tool.sh  main.py  pyproject.toml  run.sh
tools/infdb-loader/.devcontainer/: devcontainer.json  docker-compose.yml
tools/infdb-loader/configs/: Readme.md  config-infdb-loader.yml  config-loader.yml
tools/infdb-loader/sql/: buildings_lod2.sql
tools/infdb-loader/src/: basemap.py  bkg.py  census2022.py  gebaeude_neuburg.py  kwp_nrw.py  kwp_nrw_oberhausen.py  lod2.py  lod2_nrw.py  need.py  opendata_bavaria.py  openmeteo.py  package.py  plz.py  tabula.py  tudo_basemap_ways.py  utils.py  waermeatlas_hessen_bensheim.py  wetterdienst.py
tools/infdb-preprocessor/src/infdb/: InfdbClient.py  InfdbConfig.py  REAMDE.md  logger.py  pyproject.toml
usage/: index.html
(+489 files in other folders)
