[project]
name = "infdb"
version = "0.1.0"
description = "Infrastructure database and tools for kommunale Wärmeplanung"
authors = [
  { name = "Patrick Buchenberg", email = "patrick.buchenberg@tum.de" }
]
requires-python = "==3.12.*"

dependencies = [
  "beautifulsoup4",
  "bs4", # Alias, nicht zwingend notwendig
  "chardet",
  "entise>=1.1.0",
  "fastapi==0.124.0",
  "fastapi_utils==0.8.0",
  "geoalchemy2==0.17.1",
  "geopandas>=1.1.1",
  "openmeteo_requests==1.3.0",
  "pandas==2.2.3",
  "psycopg[binary]==3.3.0",
  "pydantic==2.10.5",
  "pytest>=9.0.2",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "requests",
  "requests_cache==1.2.1",
  "retry_requests==2.0.0",
  "SQLAlchemy==2.0.36",
  "sqlmodel==0.0.22",
  "starlette>=0.50.0", # required by fastapi, manual update version for CVE fix
  "typing_inspect==0.9.0",
  "uvicorn[standard]==0.25.0",
  "httpx==0.27.0",
]

[dependency-groups]
dev = ["flake8==7.1.1"]
lint = [
  "mypy>=1.19.1",
  "pandas-stubs>=2.3.3",
  "ruff>=0.14.9",
  "types-psycopg2>=2.9.21",
  "types-pyyaml>=6.0.12",
  "types-shapely>=2.1.0",
]
precommit-hook = [
  "pre-commit>=4.5.1",
]
security-lint = [
  "bandit>=1.9.2",
  "safety>=3.7.0",
]
test =[
  {include-group = "precommit-hook"},
  {include-group = "lint"},
  {include-group = "security-lint"},
]
docs = [
"mkdocs-material",
"mkdocs-material[imaging]",
"mkdocs-glightbox",
"mike",
# Plugins
"mkdocs-awesome-pages-plugin",
"watchdog",
]



#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
line-length = 120
target-version = "py312"

[tool.mypy]
mypy_path = ["src/infdb_package"]