[project]
name = "infdb"
version = "0.0.1"
authors = [
  { name="Patrick Buchenberg", email="patrick.buchenberg@tum.de" },
]
description = "InfDB wrapper for python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tum-ens/InfDB"
Issues = "https://github.com/tum-ens/InfDB/issues"